force-app/main/default/objects/Lead/fields/Activation_Number__c.field-meta.xml
<CustomField>
    <fullName>Activation_Number__c</fullName>
    <label>Activation Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>