force-app/main/default/objects/Lead/fields/Double_Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Double_Opt_in_Status__c</fullName>
    <label>Double Opt-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting confirmation</fullName>
                <default>true</default>
                <label>Awaiting confirmation</label>
            </value>
            <value>
                <fullName>Customer confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>