force-app/main/default/objects/Lead/fields/Doubt_Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Doubt_Opt_in_Status__c</fullName>
    <label>Doubt Opt-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting customer confirmation</fullName>
            </value>
            <value>
                <fullName>Customer confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>