force-app/main/default/objects/Lead/fields/Email_Honorific__c.field-meta.xml
<CustomField>
    <fullName>Email_Honorific__c</fullName>
    <formula>IF(ISPICKVAL(Gender__c , &apos;Female&apos;) ,&apos;Sehr geehrte Frau &apos;,
IF(ISPICKVAL( Gender__c , &apos;Diverse&apos;),&apos;Sehr geehrt* &apos; + &apos; &apos;,&apos;Sehr geehrter Herr &apos;))

+
 
 
IF(ISPICKVAL( Gender__c , &apos;Diverse&apos;), FirstName +&apos; &apos;, &apos;&apos;)

+

LastName</formula>
    <label>Email Honorific</label>
    <type>Text</type>
</CustomField>