force-app/main/default/objects/Lead/fields/Last_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Sent_Date__c</fullName>
    <label>Last Email Sent Date</label>
    <type>Date</type>
</CustomField>