force-app/main/default/objects/Lead/fields/Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin__c</fullName>
    <label>Lead Origin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>weisshausinvestment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>