force-app/main/default/objects/Lead/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <label>Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Subscription_Status</valueSetName>
    </valueSet>
</CustomField>