force-app/main/default/objects/Lead/fields/Product_A__c.field-meta.xml
<CustomField>
    <fullName>Product_A__c</fullName>
    <label>Product A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Subscription_Status</valueSetName>
    </valueSet>
</CustomField>