force-app/main/default/objects/Lead/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_List</valueSetName>
    </valueSet>
</CustomField>