force-app/main/default/objects/Lead/recordTypes/Banking_Customer.recordType-meta.xml
<RecordType>
    <fullName>Banking_Customer</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Banking Customer</label>
</RecordType>