force-app/main/default/objects/Lead/recordTypes/Web_Leads.recordType-meta.xml
<RecordType>
    <fullName>Web_Leads</fullName>
    <active>true</active>
    <businessProcess>Web Leads Process</businessProcess>
    <label>Web Leads</label>
</RecordType>