force-app/main/default/objects/Lead/recordTypes/WebLeads.recordType-meta.xml
<RecordType>
    <fullName>WebLeads</fullName>
    <active>true</active>
    <businessProcess>WebLeads</businessProcess>
    <label>WebLeads</label>
</RecordType>