force-app/main/default/objects/Lead/listViews/Banking_Customer_Leads.listView-meta.xml
<ListView>
    <fullName>Banking_Customer_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Banking_Customer</value>
    </filters>
    <label>Banking Customer Leads</label>
</ListView>