force-app/main/default/objects/Lead/listViews/Web_Leads_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Web_Leads_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Web Leads Queue</label>
    <queue>Web_Leads_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>