force-app/main/default/objects/Lead/listViews/WebLeads_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>WebLeads_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>Lead_Origin__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Web Leads Queue</label>
    <queue>WebLeads_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>